# ez-gui

./: CMakeLists.txt  README.md
cmake/: ez-gui-config.cmake  imgui.cmake  mq.cmake  postconfig.cmake  preconfig.cmake  skia.cmake
include/ez/: GuiWindow.hpp  Window.hpp
include/ez/gui/: Engine.hpp  ImguiSys.hpp  OpenGL.hpp  PathfinderSys.hpp  SkiaSys.hpp  Style.hpp  Subsystem.hpp
include/ez/gui/gl/: Context.hpp
include/ez/gui/subsystems/: Subsystem.hpp  imgui.hpp  mq.hpp  pathfinder.hpp  skia.hpp
src/: Engine.cpp  GuiWindow.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/basic/: main.cpp
tests/imgui/: CMakeLists.txt  main.cpp
tests/skia/: CMakeLists.txt  main.cpp
